--- a/MassAutoGarage/Views/Shared/_sidebar.cshtml
+++ b/MassAutoGarage/Views/Shared/_sidebar.cshtml
@@ -549,7 +549,7 @@
                                             <a href="@Url.Action("Index", "HRMS_Employee")" class="nav-link" data-key="t-analytics"> Employee </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="@Url.Action("Index", "HRMS_SalesTarget")" class="nav-link" data-key="t-analytics"> Sales Target </a>
+                                            <a href="@Url.Action("SalesTarget", "HRMS_SalesTarget")" class="nav-link" data-key="t-analytics"> Sales Target </a>
                                         </li>
                                         <li class="nav-item">
                                             <a href="@Url.Action("Index", "HRMS_EmployeeDocuments")" class="nav-link" data-key="t-analytics"> Employee Document Upload </a>
