--- a/MassAutoGarage/Views/HRMS_EmployeeDocuments/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_EmployeeDocuments/Index.cshtml
@@ -240,7 +240,7 @@
                                 <th style="white-space: nowrap">Visa Download</th>
                                 <th style="white-space: nowrap">Insurance Download	</th>
                                 <th style="white-space: nowrap">Emp Contract Card Download</th>
-                                <th style=" width: 15%;">Action</th>
+                                <th style=" width: 45%;">Action</th>
 
                             </tr>
                         </thead>
@@ -299,20 +299,25 @@
 
 
 @section scripts{
-    <!-- prismjs plugin -->
-    <script src="~/assets/libs/prismjs/prism.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!--datatable js-->
+
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+
+    <script src="~/assets/js/pages/datatables.init.js"></script>
+
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
-
 }
-
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script src="~/MyApp/HRMS_EmployeeDocuments.js"></script>
 
