--- a/MassAutoGarage/Views/HRMS_EmployeeBankDetails/EmployeeBankDetails.cshtml
+++ b/MassAutoGarage/Views/HRMS_EmployeeBankDetails/EmployeeBankDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model MassAutoGarage.Models.CompanyMasterModel
+﻿@model MassAutoGarage.Models.HRMS_EmployeeBankDetails.HRMSEmployeeBankDetailsModel
+
 @{
     ViewBag.Title = "Employee Bank Details";
     ViewBag.pTitle = "Employee Bank Details";
@@ -152,10 +153,6 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-
-
-
-
                 <div class="card-header main-f">
                     <div class="row">
                         <div class="col-md-6 col-5"> <h5 class="card-title mb-0 gp-detail">HRMS-Employee Bank Details</h5></div>
@@ -164,19 +161,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                @*<div class="card-header align-items-center d-flex">
-            <h4 class="card-title mb-0 flex-grow-1">HRMS-Employee Bank Details </h4>
-            <div class="flex-shrink-0">
-                <div class="form-check form-switch form-switch-right form-switch-md">
-                    <a href="@Url.Action("Index", "HRMS_EmployeeBankDetails")" class="btn btn-primary" style="float:right;" tabindex="12"><i class="fa fa-list" aria-hidden="true"></i> BACK TO EMPLOYEE BANK DETAILS LIST</a>
-                </div>
-            </div>
-        </div>*@
-
-
-
                 <!-- end card header -->
                 <div class="card-body">
                     <div class="live-preview">
@@ -184,94 +168,70 @@
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Employee Branch <code>*</code></label>
-                                    <select id="ddlDepartment" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
-                                    </select>
+                                    @*@Html.HiddenFor(m => m.Id, new { @class = "form-control" })*@
+                                    @Html.DropDownListFor(x => x.BranchId, new SelectList(ViewBag.BranchList, "BranchId", "BranchName"), "- Select Branch -", new { @class = "form-control", tabindex = 1 })
+                                    @Html.ValidationMessageFor(m => m.BranchId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Account Number<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control", tabindex = 2 })
+                                    @Html.ValidationMessageFor(m => m.AccountNumber, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Employee Name<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.EmployeeName, new { @class = "form-control", tabindex = 3 })
+                                    @Html.ValidationMessageFor(m => m.EmployeeName, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">IBAN CODE<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.IBANCODE, new { @class = "form-control", tabindex = 4 })
+                                    @Html.ValidationMessageFor(m => m.IBANCODE, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Bank Name<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", tabindex = 5 })
+                                    @Html.ValidationMessageFor(m => m.BankName, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Bank Branch<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", tabindex = 6 })
+                                    @Html.ValidationMessageFor(m => m.BankBranch, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-4 col-md-4">
                                 <div>
                                     <label for="basiInput" class="form-label">Status<code>*</code></label>
-                                    <select id="ddlStatus" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
-                                    </select>
+                                    @Html.DropDownListFor(x => x.StatusId, new SelectList(ViewBag.StatusDropdownList, "StatusId", "Status"), "- Select Status -", new { @class = "form-control", tabindex = 7 })
+                                    @Html.ValidationMessageFor(m => m.StatusId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-
-
-
                             <div class="col-xxl-4 col-md-4">
                                 <div>
-                                    <input type="button" id="btnsave" value="Save" class="btn btn-success" style=" margin-top: 8%;" />
-                                    <input type="button" id="btnReset" value="Reset" class="btn btn-danger" style=" margin-top: 8%;" />
+                                    <input type="button" id="save420" name="save" value="Save" class="btn btn-success" style=" margin-top: 8%;" />
+                                    <a href="/HRMS_EmployeeBankDetails/EmployeeBankDetails" class="btn btn-danger" style=" margin-top: 8%;">Reset</a>
                                 </div>
-                            </div>
-                            <div class="col-xxl-12 col-md-12">
-                                <div class="form-floating" style="float:left;">
-
-
-                                </div>
-
                             </div>
                             <!--end col-->
-                            <div class="col-xxl-12 col-md-12">
-                                <div class="table-responsive">
-
-
-
-                                </div>
-                            </div>
-
-                            <div class="col-xxl-12 col-md-12">
-                                <div class="form-floating" style="float:right;">
-
-
-                                </div>
-
-                            </div>
                         </div>
                         <!--end col-->
                     </div>
                     <!--end row-->
                 </div>
-
             </div>
         </div>
     </div>
-
 }
 <!--end col-->
-
 
 
 @section scripts{
@@ -279,146 +239,202 @@
     <script src="~/assets/libs/prismjs/prism.js"></script>
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
-
 }
-
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>*@
-
-@*<script src="~/Content/js/jquery.min.js"></script>*@
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-@*<script src="~/Content/js/jquery.min.js"></script>*@
+<script src="~/MyApp/HRMS_EmployeeBankDetails.js"></script>
 
 <script>
     $(document).ready(function () {
 
-
-
     });
 
 
-    $("#btnSave").click(function (e) {
+    $("#save420").click(function (e) {
         debugger;
         e.preventDefault();
+        var BranchId_ = $("#BranchId").val();
+        var AccountNumber_ = $("#AccountNumber").val();
+        var EmployeeName_ = $("#EmployeeName").val();
+        var IBANCODE_ = $("#IBANCODE").val();
+        var BankName_ = $("#BankName").val();
+        var BankBranch_ = $("#BankBranch").val();
+        var StatusId_ = $("#StatusId").val();
+        if (BranchId_ != "") {
 
-        var _code = $("#Code").val();
-        var _GroupID = $("#GroupID option:selected").val();
-        var _CompanyName = $("#CompanyName").val();
-        var _TRN = $("#TRN").val();
-        var _LocationMapUrl = $("#LocationMapUrl").val();
-        var _Email = $("#Email").val();
-        var _Address = $("#Address").val();
-        var _companyId = $("#HDFID").val();
-        var _CurrentCount = $("#HDFCurrentCount").val();
-        var _IsActive = $("#IsActive option:selected").val();
-
-        if (_code != "" && _GroupID != "" && _CompanyName != "" && _TRN != "" && _Email != "" && _Address != "") {
-
-            var ProductListArr = [];
-            var ProductList = {
-                Id: _companyId,
-                CurrentCount: _CurrentCount,
-                Code: _code,
-                GroupID: _GroupID,
-                CompanyName: _CompanyName,
-                Address: _Address,
-                TRN: _TRN,
-                Email: _Email,
-                LocationMapUrl: _LocationMapUrl,
-                IsActive: _IsActive
-
+            var MaritalSDetails = {
+                BranchId: BranchId_
             };
-            //ProductListArr.push(ProductList);
 
             if (confirm("Are you sure you want to continue ?")) {
+
                 $.ajax({
                     type: 'POST',
-                    url: '/CompanyMaster/SaveCompanyMaster',
-                    data: JSON.stringify(ProductList),
+                    url: '/HRMS_EmployeeBankDetails/SaveEmployeeBankDetails',
+                    data: JSON.stringify(MaritalSDetails),
                     contentType: "application/json; charset=utf-8",
                     dataType: 'json',
                     success: function (data) {
                         debugger;
-                        if (data == "1") {
-                            debugger;
+                        if (data.Result == "yes") {
                             swal({
                                 title: "Success",
                                 text: "Records Successfully Saved",
                                 type: "success",
                             }).then(function (isConfirm) {
                                 if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
+                                    window.location.reload();
+                                }
+                                else {
 
                                 }
                             });
-
                         }
-                        else if (data == "2") {
-
+                        else if (data.Result == "yes1") {
                             swal({
                                 title: "Success",
                                 text: "Records Successfully Updated",
                                 type: "success",
                             }).then(function (isConfirm) {
                                 if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
+                                    window.location.reload();
+                                }
+                                else {
 
                                 }
                             });
                         }
-                        else if (data == "4") {
-                            swal("Warning", "This Code is Already Exist !", "warning");
-                        } else {
 
+                        else {
                             swal("Warning", "Record not save!", "warning");
                         }
-
                     },
                     error: function (httpResponse) {
-
                         swal("Warning", "Something Went to Wrong!", "warning");
-
                     }
                 })
             }
         }
         else {
 
-            if (_code == "") {
-                swal("Warning", "Please Enter Code !", "warning");
-                return false;
-            }
-            if (_GroupID == "") {
-                swal("Warning", "Please Select Group Name!", "warning");
-                return false;
-            }
-            if (_CompanyName == "") {
-                swal("Warning", "Please Enter Company Name!", "warning");
-                return false;
-            }
-            if (_TRN == "") {
-                swal("Warning", "Please Enter TRN !", "warning");
-                return false;
-            }
-
-            if (_Email == "") {
-                swal("Warning", "Please Enter Email Address!", "warning");
-                $("#Email").val('');
-                return false;
-            }
-            if (_Address == "") {
-                swal("Warning", "Please Enter Address!", "warning");
+            if (BranchId_ == "") {
+                swal("Warning", "Please Enter BranchId ", "warning");
                 return false;
             }
         }
+    });
 
-    })
+
+
+    //$("#save4205555555555").click(function (e) {
+    //    debugger;
+    //    e.preventDefault();
+    //    var BranchId_ = $("#BranchId").val();
+    //    var AccountNumber_ = $("#AccountNumber").val();
+    //    var EmployeeName_ = $("#EmployeeName").val();
+    //    var IBANCODE_ = $("#IBANCODE").val();
+    //    var BankName_ = $("#BankName").val();
+    //    var BankBranch_ = $("#BankBranch").val();
+    //    var StatusId_ = $("#StatusId").val();
+
+    //    if (BranchId_ != "" && AccountNumber_ != "" && EmployeeName_ != "" && IBANCODE_ != "" && BankName_ != "" && BankBranch_ != "" && StatusId_ != "") {
+
+    //        var BankDetails = {
+    //            BranchId: BranchId_,
+    //            AccountNumber: AccountNumber_,
+    //            EmployeeName: EmployeeName_,
+    //            IBANCODE: IBANCODE_,
+    //            BankName: BankName_,
+    //            BankBranch: BankBranch_,
+    //            StatusId: StatusId_
+    //        };
+
+    //        if (confirm("Are you sure you want to continue ?")) {
+    //            $.ajax({
+    //                type: 'POST',
+    //                url: '/HRMS_EmployeeBankDetails/SaveEmployeeBankDetails',
+    //                data: JSON.stringify(BankDetails),
+    //                contentType: "application/json; charset=utf-8",
+    //                dataType: 'json',
+    //                success: function (data) {
+    //                    debugger;
+    //                    if (data.Result == "yes") {
+    //                        swal({
+    //                            title: "Success",
+    //                            text: "Records Successfully Saved",
+    //                            type: "success",
+    //                        }).then(function (isConfirm) {
+    //                            if (isConfirm) {
+    //                                window.location.reload();
+    //                            }
+    //                            else {
+
+    //                            }
+    //                        });
+    //                    }
+    //                    //else if (data.Result == "yes1") {
+    //                    //    swal({
+    //                    //        title: "Success",
+    //                    //        text: "Records Successfully Updated",
+    //                    //        type: "success",
+    //                    //    }).then(function (isConfirm) {
+    //                    //        if (isConfirm) {
+    //                    //            window.location.reload();
+    //                    //        }
+    //                    //        else {
+
+    //                    //        }
+    //                    //    });
+    //                    //}
+
+    //                    else {
+    //                        swal("Warning", "Record not save!", "warning");
+    //                    }
+    //                },
+    //                error: function (httpResponse) {
+    //                    swal("Warning", "Something Went to Wrong!", "warning");
+    //                }
+    //            })
+    //        }
+    //    }
+    //    else {
+
+    //        if (BranchId_ == "") {
+    //            swal("Warning", "Please Enter Employee Branch !", "warning");
+    //            return false;
+    //        }
+    //        if (AccountNumber_ == "") {
+    //            swal("Warning", "Please Enter Account Number !", "warning");
+    //            return false;
+    //        }
+    //        if (EmployeeName_ == "") {
+    //            swal("Warning", "Please Enter Employee Name !", "warning");
+    //            return false;
+    //        }
+    //        if (IBANCODE_ == "") {
+    //            swal("Warning", "Please Enter IBAN CODE !", "warning");
+    //            return false;
+    //        }
+    //        if (BankName_ == "") {
+    //            swal("Warning", "Please Enter Bank Name !", "warning");
+    //            return false;
+    //        }
+    //        if (BankBranch_ == "") {
+    //            swal("Warning", "Please Enter Bank Branch !", "warning");
+    //            return false;
+    //        }
+    //        if (StatusId_ == "") {
+    //            swal("Warning", "Please Enter Status !", "warning");
+    //            return false;
+    //        }
+    //    }
+    //});
 
 
 </script>
